--- a/Project1_Update.ipynb
+++ b/Project1_Update.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('/Users/Faisal/Desktop/Barmej/Project1/data-science-project-1/titanic.csv')"
+    "data = pd.read_csv('/Users/Faisal/Desktop/Development/Barmej/data-science-project-1/titanic.csv')"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -258,7 +258,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -373,16 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -399,13 +390,13 @@
     "# Which columns have missing values ?\n",
     "# replace the empty list below with column names that have missing values\n",
     "# for example: ['Name', 'Fare', 'Sex']\n",
-    "\n",
+    "data.columns[data.isna().any()]\n",
     "cols_with_missing_vals = ['Age','Cabin','Embarked']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -447,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -469,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -490,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -533,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -547,22 +538,12 @@
     "############################\n",
     "\n",
     "# here, print the command that extracts the mean age using numpy: \n",
-    "mean_age = data['Age'].mean()"
+    "mean_age = np.nanmean(data['Age'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert np.allclose(mean_age, 29.69911764705882), 'You did not calculate the mean age correctly.'\n",
-    "print('OK!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -596,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -711,7 +692,7 @@
        "4         0       3    male  35.0      0      0   8.0500   NaN        S"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -746,7 +727,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,13 +745,18 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "survived_count = sum(data['Survived']==1)\n",
+    "unsurvived_count = sum(data['Survived']==0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 111,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -783,12 +769,12 @@
     "# YOU HAVE TO EDIT THIS CELLL\n",
     "############################\n",
     "\n",
-    "survived_percentage = (342/549)*100"
+    "survived_percentage = (survived_count/unsurvived_count)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 112,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -818,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 104,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -835,7 +821,7 @@
        "Name: Pclass, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 105,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -862,7 +848,7 @@
        "Name: Sex, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 106,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -894,7 +880,7 @@
        "Name: Parch, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 107,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -922,7 +908,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,14 +927,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.19489981785064\n"
+      "68.12865497076024\n"
      ]
     }
    ],
@@ -958,8 +944,8 @@
     "# YOU HAVE TO EDIT THIS CELLL\n",
     "############################\n",
     "\n",
-    "\n",
-    "female_survived_percentage = (314/549)*100\n",
+    "female_survived = data['Survived'][(data['Sex']=='female')].sum()\n",
+    "female_survived_percentage = (female_survived/survived_count)*100\n",
     "print(female_survived_percentage)"
    ]
   },
@@ -977,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 156,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -996,7 +982,7 @@
       "cols_with_missing_vals=['Age', 'Cabin', 'Embarked']\n",
       "mean_age=29.69911764705882\n",
       "survived_percentage=62.295081967213115\n",
-      "female_survived_percentage=57.19489981785064\n"
+      "female_survived_percentage=68.12865497076024\n"
      ]
     }
    ],
