--- a/Project1_Final.ipynb
+++ b/Project1_Final.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('/Users/Faisal/Desktop/Development/Barmej/data-science-project-1/titanic.csv')"
+    "data = pd.read_csv('/Users/Faisal/Desktop/Barmej_1st/data-science-project-1/titanic.csv')"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -258,7 +258,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -692,7 +692,7 @@
        "4         0       3    male  35.0      0      0   8.0500   NaN        S"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -727,7 +727,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,35 +746,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "survived_count = sum(data['Survived']==1)\n",
-    "unsurvived_count = sum(data['Survived']==0)"
+    "unsurvived_count = sum(data['Survived']==0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "IwCckUJdHFdS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.38383838383838"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################\n",
     "# عليك تعديل هذه الخانة قبل تسليم المشروع\n",
     "# YOU HAVE TO EDIT THIS CELLL\n",
     "############################\n",
     "\n",
-    "survived_percentage = (survived_count/unsurvived_count)*100"
+    "survived_percentage = (survived_count/(unsurvived_count+survived_count))*100\n",
+    "survived_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -786,7 +798,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "About 62.3% of people in this dataset have survived\n"
+      "About 38.38% of people in this dataset have survived\n"
      ]
     }
    ],
@@ -804,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -821,7 +833,7 @@
        "Name: Pclass, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -848,7 +860,7 @@
        "Name: Sex, dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -880,7 +892,7 @@
        "Name: Parch, dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -908,7 +920,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -981,7 +993,7 @@
       "final_column_set=['Survived', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Cabin', 'Embarked']\n",
       "cols_with_missing_vals=['Age', 'Cabin', 'Embarked']\n",
       "mean_age=29.69911764705882\n",
-      "survived_percentage=62.295081967213115\n",
+      "survived_percentage=38.38383838383838\n",
       "female_survived_percentage=68.12865497076024\n"
      ]
     }
